--- a/templates/bio.html
+++ b/templates/bio.html
@@ -11,7 +11,7 @@
         <p class="ml-4 mt-2" style="font-size: 0.6em; border-bottom: 1px solid black; padding: 10px">Edit your bio to your liking!</p>
     </div>
     <form method="POST" >
-                    <textarea id="summernote" name="bio" id="bio">{{bio}}</textarea>
+                    <textarea name="bio" class="border20 p-3"cols="100" rows="10" id="bio">{{bio}}</textarea>
                     <div class="container text-center">
                         <button class="btn btn-default my-3" type="submit" style="color: white; background-color: #017bff">Submit</button>
                     </div>
